--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 #Database Configuration
-# URL de conexión (cambia 'localhost', el puerto y el nombre de la base de datos según corresponda)
-spring.datasource.url=jdbc:postgresql://localhost:5433/securitydatabase
+# URL de conexiÃ³n (cambia 'localhost', el puerto y el nombre de la base de datos segÃºn corresponda)
+spring.datasource.url=jdbc:postgresql://localhost:5432/securitydatabase
 # Usuario de la base de datos
 spring.datasource.username=postgres
-# Contraseña del usuario
-spring.datasource.password=Jdpo2025-1
+# ContraseÃ±a del usuario
+spring.datasource.password=########
 # Driver JDBC de PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
-# Configuración JPA (opcional pero recomendada si usas Spring Data JPA)
+# ConfiguraciÃ³n JPA (opcional pero recomendada si usas Spring Data JPA)
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
